testsuite/tests/parse-errors/let_mutable_with_function_bindings.ml
(* TEST
   flags = "-extension let_mutable";
   toplevel; *)

(* let mutable not allowed with function bindings *)
let _ = let mutable f x = x in f;;
